не совсем коректная Pnl, на первое время пойдет потом пофикшу

--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -25,7 +25,7 @@
       <p class="pop_up_info_p">Телеграм юзернеймы: <span id="usernames" class="pop_up_info_span"></span></p>
       <p class="pop_up_info_p">Анонимные номера: <span id="anons" class="pop_up_info_span"></span></p>
       <p class="pop_up_info_p">Баланс Тон: <span id="balance" class="pop_up_info_span"></span></p>
-      <p class="pop_up_info_p">PnL: <span id="pnl" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p">PnL: <span id="swap_balance" class="pop_up_info_span"></span></p>
       <p class="pop_up_info_p">Статус: <span id="status" class="pop_up_info_span"></span></p>
     </div>
     <div class="col-6">
