фикс ошибок + улучшение попапа

--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -26,7 +26,7 @@
       <p class="pop_up_info_p">Анонимные номера: <span id="anons" class="pop_up_info_span"></span></p>
       <p class="pop_up_info_p">Баланс Тон: <span id="balance" class="pop_up_info_span"></span></p>
       <p class="pop_up_info_p">PnL: <span id="swap_balance" class="pop_up_info_span"></span></p>
-      <p class="pop_up_info_p">Статус: <span id="status" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p">Статус: <span id="status" class="pop_up_info_span">В разработке</span></p>
     </div>
     <div class="col-6">
       <p class="wallet_title">Таблица последних операций с монетой</p>
@@ -170,6 +170,8 @@
         </div>
     </main>
   <script src="../js/holders.js"></script>
+  <div class="overlay" id="overlay" style="display: none;"></div>
+
 </body>
 </html> 
 
