--- a/html/lock_table.html
+++ b/html/lock_table.html
@@ -7,91 +7,90 @@
 <link rel="stylesheet" href="../style/main.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar ">
-          <div class="container-fluid">
-            <div class="me-auto">
-              <div class="language_container">
-                <button type="button" class="btn btn-success" id="eng_btn">
-                  Eng
-                </button>
-                <button
-                  type="button"
-                  class="btn btn-outline-success"
-                  id="rus_btn"
-                >
-                  Рус
-                </button>
-                <button type="button" class="btn btn-outline-secondary">
-                  <img
-                    src="../src/утенок.gif"
-                    width="30"
-                    height="24"
-                    class="d-inline-block align-text-top"
-                  />Donate project
-                </button>
-              </div>
-            </div>
-            <div class="mx-auto">
-              <a class="navbar-brand" href="#">
-                <a href="../index.html"><span class="radiant-purple">JettonAnalizer</span></a>
-                <img src="../src/ton.gif" width="30" height="24" class="d-inline-block align-text-top" style="margin-top: -2px">
-              </a>
-            </div>
-  
-            <div class="networks ms-auto">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                x="0px"
-                y="0px"
-                width="30"
-                height="24"
-                viewBox="0 0 64 64"
-                style="fill: #fff"
-              >
-                <path
-                  d="M 32 10 C 19.85 10 10 19.85 10 32 C 10 44.15 19.85 54 32 54 C 44.15 54 54 44.15 54 32 C 54 19.85 44.15 10 32 10 z M 32 14 C 41.941 14 50 22.059 50 32 C 50 41.941 41.941 50 32 50 C 22.059 50 14 41.941 14 32 C 14 22.059 22.059 14 32 14 z M 41.041016 23.337891 C 40.533078 23.279297 39.894891 23.418531 39.181641 23.675781 C 37.878641 24.145781 21.223719 31.217953 20.261719 31.626953 C 19.350719 32.014953 18.487328 32.437828 18.486328 33.048828 C 18.486328 33.478828 18.741312 33.721656 19.445312 33.972656 C 20.177313 34.234656 22.023281 34.79275 23.113281 35.09375 C 24.163281 35.38275 25.357344 35.130844 26.027344 34.714844 C 26.736344 34.273844 34.928625 28.7925 35.515625 28.3125 C 36.102625 27.8325 36.571797 28.448688 36.091797 28.929688 C 35.611797 29.410688 29.988094 34.865094 29.246094 35.621094 C 28.346094 36.539094 28.985844 37.490094 29.589844 37.871094 C 30.278844 38.306094 35.239328 41.632016 35.986328 42.166016 C 36.733328 42.700016 37.489594 42.941406 38.183594 42.941406 C 38.877594 42.941406 39.242891 42.026797 39.587891 40.966797 C 39.992891 39.725797 41.890047 27.352062 42.123047 24.914062 C 42.194047 24.175062 41.960906 23.683844 41.503906 23.464844 C 41.365656 23.398594 41.210328 23.357422 41.041016 23.337891 z"
-                ></path>
-              </svg>
-  
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                x="0px"
-                y="0px"
-                width="30"
-                height="24"
-                viewBox="0 0 50 50"
-                style="fill: #fff"
-              >
-                <path
-                  d="M 5.9199219 6 L 20.582031 27.375 L 6.2304688 44 L 9.4101562 44 L 21.986328 29.421875 L 31.986328 44 L 44 44 L 28.681641 21.669922 L 42.199219 6 L 39.029297 6 L 27.275391 19.617188 L 17.933594 6 L 5.9199219 6 z M 9.7167969 8 L 16.880859 8 L 40.203125 42 L 33.039062 42 L 9.7167969 8 z"
-                ></path>
-              </svg>
-  
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                x="0px"
-                y="0px"
-                width="30"
-                height="24"
-                viewBox="0 0 72 72"
-                style="fill: #fff"
-              >
-                <path
-                  d="M36,12c13.255,0,24,10.745,24,24c0,10.656-6.948,19.685-16.559,22.818c0.003-0.009,0.007-0.022,0.007-0.022	s-1.62-0.759-1.586-2.114c0.038-1.491,0-4.971,0-6.248c0-2.193-1.388-3.747-1.388-3.747s10.884,0.122,10.884-11.491	c0-4.481-2.342-6.812-2.342-6.812s1.23-4.784-0.426-6.812c-1.856-0.2-5.18,1.774-6.6,2.697c0,0-2.25-0.922-5.991-0.922	c-3.742,0-5.991,0.922-5.991,0.922c-1.419-0.922-4.744-2.897-6.6-2.697c-1.656,2.029-0.426,6.812-0.426,6.812	s-2.342,2.332-2.342,6.812c0,11.613,10.884,11.491,10.884,11.491s-1.097,1.239-1.336,3.061c-0.76,0.258-1.877,0.576-2.78,0.576	c-2.362,0-4.159-2.296-4.817-3.358c-0.649-1.048-1.98-1.927-3.221-1.927c-0.817,0-1.216,0.409-1.216,0.876s1.146,0.793,1.902,1.659	c1.594,1.826,1.565,5.933,7.245,5.933c0.617,0,1.876-0.152,2.823-0.279c-0.006,1.293-0.007,2.657,0.013,3.454	c0.034,1.355-1.586,2.114-1.586,2.114s0.004,0.013,0.007,0.022C18.948,55.685,12,46.656,12,36C12,22.745,22.745,12,36,12z"
-                ></path>
-              </svg>
-  
+<header>
+      <nav class="navbar">
+        <div class="container-fluid">
+          <div class="language_container ml-auto">
+            <button type="button" class="btn btn-success" id="eng_btn">
+              Eng
+            </button>
+            <button type="button" class="btn btn-outline-success" id="rus_btn">
+              Рус
+            </button>
+            <a href="https://t.me/xrocket?start=inv_j7KZ3oTLQI5bjNW">
+            <button type="button" class="btn btn-outline-secondary">
               <img
-                src="../src/support.png"
+                src="../src/утенок.gif"
                 width="30"
                 height="24"
                 class="d-inline-block align-text-top"
-              />
-            </div>
+              />Donate project
+            </button></a>
           </div>
-        </nav>
-      </header>
+          <a class="navbar-brand" href="../index.html">
+            <span class="radiant-purple">JettonAnalizer</span>
+            <img
+              src="../src/output-onlinegiftools.gif"
+              width="30"
+              height="24"
+              class="d-inline-block align-text-top"
+              style="margin-top: 2px"
+            />
+          </a>
+          <div class="networks mr-auto">
+            <a href="https://t.me/jettonanalizer"style="text-decoration: none;">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="30"
+              height="24"
+              viewBox="0 0 64 64"
+              style="fill: #fff"
+            >
+              <path
+                d="M 32 10 C 19.85 10 10 19.85 10 32 C 10 44.15 19.85 54 32 54 C 44.15 54 54 44.15 54 32 C 54 19.85 44.15 10 32 10 z M 32 14 C 41.941 14 50 22.059 50 32 C 50 41.941 41.941 50 32 50 C 22.059 50 14 41.941 14 32 C 14 22.059 22.059 14 32 14 z M 41.041016 23.337891 C 40.533078 23.279297 39.894891 23.418531 39.181641 23.675781 C 37.878641 24.145781 21.223719 31.217953 20.261719 31.626953 C 19.350719 32.014953 18.487328 32.437828 18.486328 33.048828 C 18.486328 33.478828 18.741312 33.721656 19.445312 33.972656 C 20.177313 34.234656 22.023281 34.79275 23.113281 35.09375 C 24.163281 35.38275 25.357344 35.130844 26.027344 34.714844 C 26.736344 34.273844 34.928625 28.7925 35.515625 28.3125 C 36.102625 27.8325 36.571797 28.448688 36.091797 28.929688 C 35.611797 29.410688 29.988094 34.865094 29.246094 35.621094 C 28.346094 36.539094 28.985844 37.490094 29.589844 37.871094 C 30.278844 38.306094 35.239328 41.632016 35.986328 42.166016 C 36.733328 42.700016 37.489594 42.941406 38.183594 42.941406 C 38.877594 42.941406 39.242891 42.026797 39.587891 40.966797 C 39.992891 39.725797 41.890047 27.352062 42.123047 24.914062 C 42.194047 24.175062 41.960906 23.683844 41.503906 23.464844 C 41.365656 23.398594 41.210328 23.357422 41.041016 23.337891 z"
+              ></path>
+            </svg>
+            </a>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="30"
+              height="24"
+              viewBox="0 0 50 50"
+              style="fill: #fff"
+            >
+              <path
+                d="M 5.9199219 6 L 20.582031 27.375 L 6.2304688 44 L 9.4101562 44 L 21.986328 29.421875 L 31.986328 44 L 44 44 L 28.681641 21.669922 L 42.199219 6 L 39.029297 6 L 27.275391 19.617188 L 17.933594 6 L 5.9199219 6 z M 9.7167969 8 L 16.880859 8 L 40.203125 42 L 33.039062 42 L 9.7167969 8 z"
+              ></path>
+            </svg>
+            <a href="https://github.com/sw1ir/jettonanazer" style="text-decoration: none;">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="30"
+              height="24"
+              viewBox="0 0 72 72"
+              style="fill: #fff"
+            >
+              <path
+                d="M36,12c13.255,0,24,10.745,24,24c0,10.656-6.948,19.685-16.559,22.818c0.003-0.009,0.007-0.022,0.007-0.022	s-1.62-0.759-1.586-2.114c0.038-1.491,0-4.971,0-6.248c0-2.193-1.388-3.747-1.388-3.747s10.884,0.122,10.884-11.491	c0-4.481-2.342-6.812-2.342-6.812s1.23-4.784-0.426-6.812c-1.856-0.2-5.18,1.774-6.6,2.697c0,0-2.25-0.922-5.991-0.922	c-3.742,0-5.991,0.922-5.991,0.922c-1.419-0.922-4.744-2.897-6.6-2.697c-1.656,2.029-0.426,6.812-0.426,6.812	s-2.342,2.332-2.342,6.812c0,11.613,10.884,11.491,10.884,11.491s-1.097,1.239-1.336,3.061c-0.76,0.258-1.877,0.576-2.78,0.576	c-2.362,0-4.159-2.296-4.817-3.358c-0.649-1.048-1.98-1.927-3.221-1.927c-0.817,0-1.216,0.409-1.216,0.876s1.146,0.793,1.902,1.659	c1.594,1.826,1.565,5.933,7.245,5.933c0.617,0,1.876-0.152,2.823-0.279c-0.006,1.293-0.007,2.657,0.013,3.454	c0.034,1.355-1.586,2.114-1.586,2.114s0.004,0.013,0.007,0.022C18.948,55.685,12,46.656,12,36C12,22.745,22.745,12,36,12z"
+              ></path>
+            </svg></a>
+            <a href="https://t.me/JettonAnalizer_bot" style="text-decoration: none;">
+            <img
+              src="../src/support.png"
+              width="30"
+              height="24"
+              class="d-inline-block align-text-top"
+            /></a>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main>
  
         <div class="row">
