--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="/src/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="src/favicon.ico" type="image/x-icon">
     <title>Crypto scan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -205,4 +205,5 @@
 
   </body>
 </html>
+
 
